# ua_parser

./: .gitignore  CMakeLists.txt  a.sh  bake.sh  cmake.sh  run.sh
inc/: ua_parser.hpp
inc/ua_parser/: ua_parser.hpp
src/: main.cpp  ua_parser.cpp  ua_parser.hpp
